# data-engineering-iu-task-2

./: README.md  docker-compose.yml  dockerfile.consumer  dockerfile.producer  pyproject.toml
config/: config.yml
src/data_engineering_iu_task_2/: __init__.py  config.py  models.py  setup_logger.py
src/data_engineering_iu_task_2/data_consumer/: data_consumer.py  database.py  kafka_consumer.py  setup_consumer_logger.py
src/data_engineering_iu_task_2/data_streamer/: data_loading.py  data_streamer.py  kafka_producer.py  setup_streamer_logger.py
tests/: test_database_client.py
